# qt_sql_plugin_installer

./: README.md  action.yml  index.js  package.json  qt5.js  qt6.js
.github/workflows/: test.yml
test/: CMakeLists.txt  main.cpp
